// internal/proto/reddit.proto
syntax = "proto3";
package reddit;

option go_package = "reddit-clone/internal/proto";

service RedditService {
    rpc RegisterAccount(RegisterRequest) returns (UserResponse);
    rpc CreateSubreddit(SubredditRequest) returns (SubredditResponse);
    rpc JoinSubreddit(JoinRequest) returns (StatusResponse);
    rpc LeaveSubreddit(JoinRequest) returns (StatusResponse);
    rpc CreatePost(PostRequest) returns (PostResponse);
    rpc CreateComment(CommentRequest) returns (CommentResponse);
    rpc Vote(VoteRequest) returns (StatusResponse);
    rpc GetFeed(FeedRequest) returns (FeedResponse);
    rpc SendMessage(MessageRequest) returns (MessageResponse);
    rpc GetUserMessages(UserRequest) returns (MessagesResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message SubredditRequest {
    string name = 1;
    string description = 2;
    string creator_id = 3;
}

message JoinRequest {
    string user_id = 1;
    string subreddit_id = 2;
}

message PostRequest {
    string title = 1;
    string content = 2;
    string author_id = 3;
    string subreddit_id = 4;
}

message CommentRequest {
    string content = 1;
    string author_id = 2;
    string post_id = 3;
    optional string parent_id = 4;
}

message VoteRequest {
    string user_id = 1;
    string target_id = 2;
    bool is_upvote = 3;
}

message MessageRequest {
    string from_id = 1;
    string to_id = 2;
    string content = 3;
}

message UserRequest {
    string user_id = 1;
}

message FeedRequest {
    string user_id = 1;
}

message UserResponse {
    string id = 1;
    string username = 2;
    int64 karma = 3;
    bool is_online = 4;
    int64 created_at = 5;
}

message SubredditResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string creator_id = 4;
    int64 member_count = 5;
    int64 created_at = 6;
}

message PostResponse {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string subreddit_id = 5;
    int64 upvotes = 6;
    int64 downvotes = 7;
    int64 created_at = 8;
}

message CommentResponse {
    string id = 1;
    string content = 2;
    string author_id = 3;
    string post_id = 4;
    string parent_id = 5;    // Changed from optional string
    int32 depth = 6;
    int64 upvotes = 7;
    int64 downvotes = 8;
    int64 created_at = 9;
}


message MessageResponse {
    string id = 1;
    string from_id = 2;
    string to_id = 3;
    string content = 4;
    bool is_read = 5;
    int64 created_at = 6;
}

message MessagesResponse {
    repeated MessageResponse messages = 1;
}

message FeedResponse {
    repeated PostResponse posts = 1;
}

message StatusResponse {
    bool success = 1;
    string message = 2;
}